# Software-Engineering-System--URL-Shortener

./: .env.example  .gitignore  DEMO.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py
app/console/templates/: console.html
app/orchestrator/: adapters.py  agents.py  api.py  engine.py  mock_agents.py  models.py  policies.py  store.py  workspace.py
app/shortener/: api.py  models.py  repository.py  service.py
docs/: ARCHITECTURE.md  ENGINEERING_SUMMARY.md
migrations/: env.py
migrations/versions/: 0001_initial.py
scenarios/: scenarios.json
scenarios/baselines/ambiguous/tests/: test_baseline.py
scenarios/baselines/brownfield/shortcode/: app.py
scenarios/baselines/brownfield/tests/: test_regression.py
scenarios/baselines/greenfield/: README.md
tests/: conftest.py  test_adapters.py  test_orchestrator.py  test_scenarios_e2e.py  test_shortener.py
